src/test/ui/feature-gate-nll.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/feature-gate-nll.rs:17:5
   |
16 |     let p = &x;
   |              - borrow of `x` occurs here
17 |     x = 22; //~ ERROR cannot assign to `x` because it is borrowed [E0506]
   |     ^^^^^^ assignment to borrowed `x` occurs here

error: aborting due to previous error

